--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ addons:
 
 script: 
     
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=IlConteCvma_JCS -e -X
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=IlConteCvma_JCS -e
