--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
  
     <groupId>it.uniroma2.dicii.isw2</groupId>
     <artifactId>jcs</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
  
     <name>jcs</name>
@@ -115,18 +115,22 @@
     				<plugin>
 			            <groupId>org.jacoco</groupId>
 			            <artifactId>jacoco-maven-plugin</artifactId>
+			            
 			            <executions>
 			              <execution>
 			                <id>prepare-agent</id>
 			                <goals>
 			                  <goal>prepare-agent</goal>
 			                </goals>
+			                
 			              </execution>
 			              <execution>
 			                <id>report</id>
+			                <phase>test</phase>
 			                <goals>
 			                  <goal>report</goal>
 			                </goals>
+			                
 			              </execution>
 			            </executions>
 			         </plugin>
