--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>11</java.version>
+        
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.release>${java.version}</maven.compiler.release>
@@ -23,6 +24,7 @@
         <!-- Plugin versions -->
         <maven.shade>3.2.2</maven.shade>
         <maven.clean>3.1.0</maven.clean>
+        <jacoco.version>0.8.5</jacoco.version>
         <maven.resources>3.1.0</maven.resources>
         <maven.compiler>3.8.1</maven.compiler>
         <maven.surefire>3.0.0-M5</maven.surefire>
@@ -36,12 +38,14 @@
         <!-- Dependencies -->
     	
 		
+		
 		<dependency>
     		<groupId>org.apache.jcs</groupId>
     		<artifactId>jcs</artifactId>
     		<version>1.3</version>
 		</dependency>
 		
+		 
     
         <!-- Testing dependencies-->
         <dependency>
@@ -66,12 +70,13 @@
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
             </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
-            </plugin>
+            
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
@@ -85,11 +90,7 @@
 		        <artifactId>sonar-maven-plugin</artifactId>
 		        <version>3.9.0.2155</version>
         	</plugin>
-	        <plugin>
-	          <groupId>org.jacoco</groupId>
-	          <artifactId>jacoco-maven-plugin</artifactId>
-	          <version>0.8.7</version>
-	        </plugin>
+	        
         </plugins>
         
         <testResources>
@@ -108,32 +109,90 @@
     	<profile>
     		<id>coverage</id>
     		<activation>
-    			<activeByDefault>true</activeByDefault>
+    			<activeByDefault>false</activeByDefault>
     		</activation>
+    		
+    		<dependencies>
+    			<dependency>
+    				<groupId>org.apache.jcs</groupId>
+					<artifactId>jcs</artifactId>
+					<version>1.3</version>
+					<scope>system</scope>
+					<systemPath>${basedir}/src/test/lib/jcs-1.3-fat.jar</systemPath>
+    			</dependency>
+    			<dependency>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+					<version>1.1.2</version>
+				</dependency>
+				
+				<dependency>
+					<groupId>concurrent</groupId>
+					<artifactId>concurrent</artifactId>
+					<version>1.0</version>
+				</dependency>
+				<dependency>
+					<groupId>org.jacoco</groupId>
+					<artifactId>org.jacoco.agent</artifactId>
+					<classifier>runtime</classifier>
+					<version>${jacoco.version}</version>
+				</dependency>
+    		</dependencies> 		
+    		
+    		
+    		
     		<build>
     			<plugins>
     				<plugin>
 			            <groupId>org.jacoco</groupId>
 			            <artifactId>jacoco-maven-plugin</artifactId>
+			            <version>${jacoco.version}</version>
 			            
+			           
+			           <configuration>
+			     			<excludes> 
+						        	<exclude>org/apache/jcs/**</exclude> 
+						  	</excludes>
+     		            </configuration>
+			             
+			             
 			            <executions>
 			              <execution>
-			                <id>prepare-agent</id>
+			                <id>TheExecutionId</id>
 			                <goals>
 			                  <goal>prepare-agent</goal>
 			                </goals>
-			                
+			                <!-- Eventual configuration -->
+			             	<configuration>
+			             		
+			             	</configuration>
 			              </execution>
-			              <execution>
-			                <id>report</id>
-			                <phase>test</phase>
-			                <goals>
-			                  <goal>report</goal>
-			                </goals>
-			                
-			              </execution>
+			              
+			                 	
 			            </executions>
+			             
+			            
 			         </plugin>
+			         
+			        <plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${maven.surefire}</version>
+						<executions>
+						
+							<execution>
+								<id>TheExecutionId-Surefire</id>
+								<goals>
+									<goal>test</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<reuseForks>false</reuseForks>
+							<useUnlimitedThreads>true</useUnlimitedThreads>
+							
+	                    </configuration>
+					</plugin> 
     			</plugins>
     		</build>
     	</profile>
