--- a/pom.xml
+++ b/pom.xml
@@ -64,10 +64,7 @@
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>3.1.0</version>
             </plugin>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.1.0</version>
-            </plugin>
+            
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
@@ -81,10 +78,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
             </plugin>
-            <plugin>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>3.0.0-M1</version>
-            </plugin>
+            
             <plugin>
 		        <groupId>org.sonarsource.scanner.maven</groupId>
 		        <artifactId>sonar-maven-plugin</artifactId>
@@ -117,8 +111,8 @@
     				<groupId>org.apache.jcs</groupId>
 					<artifactId>jcs</artifactId>
 					<version>1.3</version>
-					<scope>system</scope>
-					<systemPath>${basedir}/src/test/lib/jcs-1.3-fat.jar</systemPath>
+					
+					
     			</dependency>
     			<dependency>
 					<groupId>commons-logging</groupId>
@@ -143,6 +137,32 @@
     		
     		<build>
     			<plugins>
+    			
+    			
+    				<plugin>
+					    <groupId>org.apache.maven.plugins</groupId>
+					    <artifactId>maven-install-plugin</artifactId>
+					    <version>${maven.install}</version>
+					    <executions>
+					        <execution>
+					            <id>install-external</id>
+					            <phase>process-resources</phase>
+					            <configuration>
+					                <file>${basedir}/src/test/lib/jcs-1.3-fat.jar</file>
+					                <repositoryLayout>default</repositoryLayout>
+					                <groupId>org.apache.jcs</groupId>
+					                <artifactId>jcs</artifactId>
+					                <version>1.3</version>
+					                <packaging>jar</packaging>
+					                <generatePom>true</generatePom>
+					            </configuration>
+					            <goals>
+					                <goal>install-file</goal>
+					            </goals>
+					        </execution>
+					    </executions>
+					</plugin>
+						
     				<plugin>
 			            <groupId>org.jacoco</groupId>
 			            <artifactId>jacoco-maven-plugin</artifactId>
@@ -174,25 +194,7 @@
 			            
 			         </plugin>
 			         
-			        <plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${maven.surefire}</version>
-						<executions>
-						
-							<execution>
-								<id>TheExecutionId-Surefire</id>
-								<goals>
-									<goal>test</goal>
-								</goals>
-							</execution>
-						</executions>
-						<configuration>
-							<reuseForks>false</reuseForks>
-							<useUnlimitedThreads>true</useUnlimitedThreads>
-							
-	                    </configuration>
-					</plugin> 
+			        
     			</plugins>
     		</build>
     	</profile>
